sample/pair-pro/application/errors/undefined-element-error.ts
export class UndefinedElementError extends Error {}
